--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -4,4 +4,4 @@ logging.level.com.maxaramos.springwstestclient=DEBUG
 logging.pattern.console=%clr(%date{yyyy-MM-dd'T'HH:mm:ss.SSS}){faint} %clr(%-5level) [%clr(%logger){cyan}] - %msg%exception%n%n
 logging.pattern.file=%date{yyyy-MM-dd'T'HH:mm:ss.SSS} %-5level [%logger] - %msg%exception%n%n
 
-spring.webservices.wsdl-locations=classpath:/xsd, classpath:/wsdl
+server.port=9090
