Added logger and updated log config.

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,6 +1,6 @@
 logging.file=log/spring-ws-test-client.log
-logging.level.root=DEBUG
-logging.level.com.maxaramos.springwstestclient=DEBUG
+logging.level.root=INFO
+logging.level.com.maxaramos.springwstestclient=INFO
 logging.pattern.console=%clr(%date{yyyy-MM-dd'T'HH:mm:ss.SSS}){faint} %clr(%-5level) [%clr(%logger){cyan}] - %msg%exception%n%n
 logging.pattern.file=%date{yyyy-MM-dd'T'HH:mm:ss.SSS} %-5level [%logger] - %msg%exception%n%n
 
