--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.0.RELEASE</version>
+		<version>2.0.6.RELEASE</version>
 	</parent>
 
-	<groupId>com.maxaramos.springwstestclient</groupId>
-	<artifactId>spring-ws-test-client</artifactId>
+	<groupId>com.maxaramos.samplespringwsclient</groupId>
+	<artifactId>sample-spring-ws-client</artifactId>
 	<version>1.0.0</version>
 
 	<properties>
@@ -75,6 +75,6 @@
 				</executions>
 			</plugin>
 		</plugins>
-		<finalName>spring-ws-test-client</finalName>
+		<finalName>sample-spring-ws-client</finalName>
 	</build>
 </project>
